<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_xlarge"
    android:paddingBottom="@dimen/margin_xxlarge"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/rlSheetHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_medium_2"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBook"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_width="@dimen/width_image_bottom_sheet"
            android:layout_height="@dimen/height_image_bottom_sheet"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookTitle"
            android:text="Title of the book"
            android:layout_marginVertical="@dimen/margin_medium"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/text_regular_3x"
            android:layout_toEndOf="@id/ivBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookAuthor"
            android:text="Author"
            android:layout_toEndOf="@id/ivBook"
            android:layout_below="@id/tvBookTitle"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/text_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlDownload"
        android:layout_marginVertical="@dimen/margin_medium"
        android:layout_below="@id/rlSheetHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivDownload"
        android:layout_width="@dimen/margin_xlarge"
        android:layout_height="@dimen/margin_xlarge"
        app:tint="@color/color_dark_grey"
        app:srcCompat="@drawable/ic_download_24"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDownload"
        android:text="@string/lbl_download"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/text_regular_2x"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_xlarge"
        android:layout_toEndOf="@id/ivDownload"
        android:gravity="center"
        />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlDelete"
        android:layout_marginVertical="@dimen/margin_medium"
        android:layout_below="@id/rlDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivDelete"
            android:layout_width="@dimen/margin_xlarge"
            android:layout_height="@dimen/margin_xlarge"
            app:tint="@color/color_dark_grey"
            app:srcCompat="@drawable/ic_delete_forever_24"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDelete"
            android:text="@string/lbl_delete"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/text_regular_2x"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_xlarge"
            android:layout_toEndOf="@id/ivDelete"
            android:gravity="center"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlShelves"
        android:layout_marginVertical="@dimen/margin_medium"
        android:layout_below="@id/rlDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivShelves"
            android:layout_width="@dimen/margin_xlarge"
            android:layout_height="@dimen/margin_xlarge"
            app:tint="@color/color_dark_grey"
            app:srcCompat="@drawable/ic_add_24"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvShelves"
            android:text="@string/lbl_add_to_shelves"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/text_regular_2x"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_xlarge"
            android:layout_toEndOf="@id/ivShelves"
            android:gravity="center"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlMakeRead"
        android:layout_marginVertical="@dimen/margin_medium"
        android:layout_below="@id/rlShelves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivMakeRead"
            android:layout_width="@dimen/margin_xlarge"
            android:layout_height="@dimen/margin_xlarge"
            app:tint="@color/color_dark_grey"
            app:srcCompat="@drawable/ic_check_24"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMakeRead"
            android:text="@string/lbl_make_as_read"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/text_regular_2x"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_xlarge"
            android:layout_toEndOf="@id/ivMakeRead"
            android:gravity="center"
            />
    </RelativeLayout>
</RelativeLayout>