<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="@dimen/margin_medium_2"
    android:paddingVertical="@dimen/text_regular_2x">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvViewAs"
        android:text="@string/sort_by"
        app:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:id="@+id/rdGroup"
        android:layout_below="@id/tvViewAs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdRecent"
            android:text="@string/recent_open"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/text_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdTitle"
            android:text="@string/title"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/text_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdAuthor"
            android:text="@string/author"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/text_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>

</RelativeLayout>