<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.YourShelvesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvShelves"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnCreateNewShelf"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_shelves"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateNewShelf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:icon="@drawable/ic_arrow_right_24"
        app:cornerRadius="@dimen/margin_medium_2"
        android:text="@string/lbl_create_new_shelf"
        android:layout_marginVertical="@dimen/margin_medium_2"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>